--- a/turnstile-webpage/src/index.css
+++ b/turnstile-webpage/src/index.css
@@ -24,6 +24,14 @@ header h1 {
   vertical-align: middle;
 }
 
+h2 {
+  font-size: 100%;
+  letter-spacing: 0.3px;
+  display: inline-block;
+  margin: 0;
+  vertical-align: middle;
+}
+
 .container {
   display: flex;
   margin: 0 auto;
@@ -44,36 +52,12 @@ header h1 {
 .display-count {
   border-radius: 2px;
   border-top: 3px solid #000000;
-  margin-right: 50px;
+  margin-right: 5%;
   background-color: rgb(237, 237, 237);
-  padding: 60px 18px;
+  padding: 6% 3%;
   box-shadow: 0 3px 4px 0 rgba(0,0,0,.14), 0 3px 3px -2px rgba(0,0,0,.12), 0 1px 8px 0 rgba(0,0,0,.2);
-  margin-bottom: 34px;  
+  margin-bottom: 5%;  
   width: 25%;
-  margin-right: auto;
-}
-
-.display-day {
-  border-radius: 2px;
-  border-top: 3px solid #000000;
-  margin-right: 50px;
-  background-color: rgb(237, 237, 237);
-  padding: 60px 18px;
-  box-shadow: 0 3px 4px 0 rgba(0,0,0,.14), 0 3px 3px -2px rgba(0,0,0,.12), 0 1px 8px 0 rgba(0,0,0,.2);
-  margin-bottom: 34px;  
-  width: 15%;
-  margin-right: auto;
-}
-
-.display-history{
-  border-radius: 2px;
-  border-top: 3px solid #000000;
-  margin-right: 25px;
-  background-color: rgb(237, 237, 237);
-  padding: 60px 18px;
-  box-shadow: 0 3px 4px 0 rgba(0,0,0,.14), 0 3px 3px -2px rgba(0,0,0,.12), 0 1px 8px 0 rgba(0,0,0,.2);
-  margin-bottom: 0px;  
-  width: 22%;
   margin-right: auto;
 }
 
@@ -81,9 +65,8 @@ header h1 {
   border-radius: 2px;
   border-top: 3px solid #000000;
   background-color: rgb(237, 237, 237);
-  padding: 60px 18px;
+  padding: 6% 3%;
   box-shadow: 0 3px 4px 0 rgba(0,0,0,.14), 0 3px 3px -2px rgba(0,0,0,.12), 0 1px 8px 0 rgba(0,0,0,.2);
-  min-width: 15%;
   height: 10%;
   margin-left: 5%;
 }
@@ -92,9 +75,9 @@ header h1 {
   border-radius: 2px;
   border-top: 3px solid #000000;
   background-color: rgb(237, 237, 237);
-  padding: 60px 18px;
+  padding: 6% 3%;
   box-shadow: 0 3px 4px 0 rgba(0,0,0,.14), 0 3px 3px -2px rgba(0,0,0,.12), 0 1px 8px 0 rgba(0,0,0,.2);
-  margin-top: 34px;
+  margin-top: 5%;
 }
 
 ul {
@@ -158,9 +141,10 @@ button {
   background-color: rgb(225, 225, 2);
   cursor: pointer;
   border: 0;
-  color: #fff;
-  font-size: 1vw;
-  padding: 10px 6px;
+  color: rgb(255, 255, 255);
+  font-size: 45%;
+  font-weight: bold;
+  padding: 1% 1%;
   box-shadow: 0 4px 4px 0 rgba(0,0,0,.14), 1px 10px 10px -2px rgba(0,0,0,.12), 2px 1px 1px 0 rgba(0,0,0,.2);
 }
 
